layout-mobile-desktop-finished

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,38 @@
     <link rel="stylesheet" href="style.css">
     <title>RocketCoffee</title>
 </head>
+
 <body>
+
+    <div class="header-mobile">
+        <img id="logo" src="/RocketCoffee-Rocketseat/assets/logo-mobile.svg">
+        <img id="menu-open" src="/RocketCoffee-Rocketseat/assets/menu-buguer-open.svg">
+    </div>
+    <header class="header-desktop">
+        <img src="/RocketCoffee-Rocketseat/assets/logo-desktop.svg">
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Menu</a>
+            <a href="#">Recompensas</a>
+            <a href="#">GiftCards</a>
+            <a href="#">Lojas</a>
+        </nav>
+        <button class="button-desktop">Pegar Meu Café</button>
+    </header>
+    <div class="header-title">
+        <p id="header-title">O café que fará seu código decolar para o próximo nível.</p>
+        <button class="button-mobile">Pegar meu café</button>
+    </div>
+    <div class="title">
+        <p>Great Coffee</p>
+        <p id="stroke">&#60;Great Code &#47;&#62;</p>
+    </div>
+    <div class="background-desktop"></div>
+    <div class="background-mobile"></div>
+    <!--
+    <img src="/RocketCoffee-Rocketseat/assets/menu-buguer-close.svg"> -->
+
     <script src="/RocketCoffee-Rocketseat/script.js"></script>
 </body>
+
 </html>
