--- a/index.html
+++ b/index.html
@@ -10,11 +10,33 @@
 </head>
 
 <body>
-
-    <div class="header-mobile">
-        <img id="logo" src="/RocketCoffee-Rocketseat/assets/logo-mobile.svg">
-        <img id="menu-open" src="/RocketCoffee-Rocketseat/assets/menu-buguer-open.svg">
+    <div class="background-mobile mobile"></div>
+    <header class="header-mobile mobile">
+        <img src="/RocketCoffee-Rocketseat/assets/logo-mobile.svg">
+        <button id="menu-button"></button>
+    </header>
+    <main class="main mobile">
+        <p class="slogan">O café que fará seu código decolar para o próximo nível.</p>
+        <button class="mobile-button">Pegar Meu Café <img src="/RocketCoffee-Rocketseat/assets/arrow.svg"></button>
+    </main>
+    <div class="title-mobile mobile">
+        <p>Great Coffee</p>
+        <p id="stroke">&#60;Great Code &#47;&#62;</p>
     </div>
+    <nav class="nav-menu-mobile" id="nav-menu-mobile">
+        <a href="#">Home</a>
+        <a href="#">Menu</a>
+        <a href="#">Recompensas</a>
+        <a href="#">GiftCards</a>
+        <a href="#">Lojas</a>
+    </nav>
+    <nav class="nav-menu-desktop">
+        <a href="#">Home</a>
+        <a href="#">Menu</a>
+        <a href="#">Recompensas</a>
+        <a href="#">GiftCards</a>
+        <a href="#">Lojas</a>
+    </nav>
     <header class="header-desktop">
         <img src="/RocketCoffee-Rocketseat/assets/logo-desktop.svg">
         <nav>
@@ -26,20 +48,11 @@
         </nav>
         <button class="button-desktop">Pegar Meu Café</button>
     </header>
-    <div class="header-title">
-        <p id="header-title">O café que fará seu código decolar para o próximo nível.</p>
-        <button class="button-mobile">Pegar meu café</button>
-    </div>
-    <div class="title">
+    <div class="title-desktop">
         <p>Great Coffee</p>
         <p id="stroke">&#60;Great Code &#47;&#62;</p>
     </div>
     <div class="background-desktop"></div>
-    <div class="background-mobile"></div>
-    <!--
-    <img src="/RocketCoffee-Rocketseat/assets/menu-buguer-close.svg"> -->
-
     <script src="/RocketCoffee-Rocketseat/script.js"></script>
 </body>
-
 </html>
